<resources>
<string name="app_name">Lesson1</string>
<string name="best_weather_app">Best Weather APP</string>
<string name="refresh">Обновить</string>
<string name="CityN">Город</string>
<string name="City">Город</string>
<string name="temperature">+22</string>
<string name="pic">TODO</string>
<string name="CityTag">Best Weather App</string>
<string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
<string name="CityName">Введите Ваш город</string>
<string name="ButtoN">Выбрать</string>
<string name="Actv1"></string>
<string name="DopInfo">Показать скорость ветра</string>
<string name="ButtonChoose">Выбрать город</string>

    <string name="Actv2">Введите город</string>
    <string name="MC">Введите Ваш город</string>
    <string name="CheckBox2">Показать влажность</string>
</resources>
